# JobTracker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  docker-compose.yml  example.init.sql  init.sql  pyproject.toml  requirements.txt
docs/: JobTrackArchitecture.drawio
job_tracker/: Dockerfile  __init__.py  main.py
job_tracker/utils/: __init__.py  database_helpers.py
tests/: __init__.py  analyze_job_description.py  clipboard_copy.py  database_example.py  get_jobs_via_api.py  hotkey_test.py  langchain_example.py
