[project]
name = "JobTracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis David Garcia"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-community (>=0.3.14,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
