[project]
name = "JobTracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis David Garcia"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "psycopg (>=3.2.4,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

