[project]
name = "JobTracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis David Garcia"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "psycopg (>=3.2.4,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"
flake8-blind-except = "^0.2.1"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120 # Set your preferred line length
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",    # pyupgrade
    "YTT",  # flake8-2020
    "ANN", # flake8-annotations
    "S", # flake8-bandit
    "B904", # Blind excepts (flake8-blind-except equivalent)
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "TCH", # flake8-type-checking
]
lint.ignore = []
target-version = "py311" # Set your target Python version
src = ["."] # Where your source code is
exclude = [".venv"] # exclude virtual environments
fix = true # Automatically fix simple errors

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py files

[tool.ruff.lint.isort]
known-first-party = ["job_tracker"]

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google docstring style